# cmd/api/middleware.go
@@ -1,0 +1,96 @@
+package main
+
+import (
+	"context"
+	"encoding/base64"
+	"fmt"
+	"net/http"
+	"strconv"
+	"strings"
+
+	"github.com/golang-jwt/jwt/v5"
+)
+
+func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		authHeader := r.Header.Get("Authorization")
+		if authHeader == "" {
+			app.unAuthorizedErrorResponse(w, r, fmt.Errorf("Unauthorized request"))
+			return
+		}
+
+		parts := strings.Split(authHeader, " ")
+
+		if len(parts) != 2 || parts[0] != "Bearer" {
+			app.unAuthorizedErrorResponse(w, r, fmt.Errorf("authorization header is malformed"))
+			return
+		}
+
+		token := parts[1]
+
+		jwtToken, err := app.auth.ValidateToken(token)
+		if err != nil {
+			app.unAuthorizedErrorResponse(w, r, err)
+			return
+		}
+
+		claims, _ := jwtToken.Claims.(jwt.MapClaims)
+
+		userID, err := strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10, 64)
+
+		if err != nil {
+			app.unAuthorizedErrorResponse(w, r, err)
+			return
+		}
+		ctx := r.Context()
+		user, err := app.store.Users.GetByID(ctx, userID)
+		if err != nil {
+			app.unAuthorizedErrorResponse(w, r, err)
+			return
+		}
+		ctx = context.WithValue(ctx, userCtx, user)
+		next.ServeHTTP(w, r.WithContext(ctx))
+	})
+}
+
+func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler {
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			authHeader := r.Header.Get("Authorization")
+
+			if authHeader == "" {
+				app.unAuthorizedBasicErrorResponse(w, r, fmt.Errorf("Unauthorized request"))
+				return
+			}
+
+			parts := strings.Split(authHeader, " ")
+
+			if len(parts) != 2 || parts[0] != "Basic" {
+				app.unAuthorizedBasicErrorResponse(w, r, fmt.Errorf("authorization header is malformed"))
+				return
+			}
+
+			decoded, err := base64.StdEncoding.DecodeString(parts[1])
+
+			if err != nil {
+				app.unAuthorizedBasicErrorResponse(w, r, err)
+				return
+			}
+
+			username := app.config.auth.basic.username
+			password := app.config.auth.basic.password
+
+			app.logger.Infow("Basic Auth", "username", username, "password", password)
+
+			creds := strings.SplitN(string(decoded), ":", 2)
+
+			if len(creds) != 2 || creds[0] != username || creds[1] != password {
+				app.unAuthorizedBasicErrorResponse(w, r, fmt.Errorf("invalid credentials"))
+				return
+			}
+
+			next.ServeHTTP(w, r)
+
+		})
+	}
+}
